--- a/LOG660_InsertionProgram/LOG660_InsertionProgram.csproj
+++ b/LOG660_InsertionProgram/LOG660_InsertionProgram.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="OSQLConnection.cs" />
     <Compile Include="XMLRawData.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
