Try of something gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 LOG660_InsertionProgram/obj/Debug/CoreCompileInputs.cache
 *.cache
 
+ClientWeb/.vs/config/applicationhost.config
 
 # Created by https://www.gitignore.io/api/visualstudio
 
