--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 LOG660_InsertionProgram/obj/Debug/CoreCompileInputs.cache
 *.cache
 
-.vs/config/applicationhost.config
+ClientWeb/.vs/config/
 
 # Created by https://www.gitignore.io/api/visualstudio
 
