--- a/.gitignore
+++ b/.gitignore
@@ -300,6 +300,6 @@ __pycache__/
 # End of https://www.gitignore.io/api/visualstudio
 
 ClientWeb/packages
-ClientWeb/Scripts
-ClientWeb/fonts
-ClientWeb/Content/bootstrap*
+ClientWeb/ClientWeb/Scripts
+ClientWeb/ClientWeb/fonts
+ClientWeb/ClientWeb/Content/bootstrap*
