--- a/ClientWeb/ClientWeb/packages.config
+++ b/ClientWeb/ClientWeb/packages.config
@@ -23,6 +23,7 @@
   <package id="Modernizr" version="2.8.3" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net452" />
   <package id="NHibernate" version="4.1.1.4000" targetFramework="net452" />
+  <package id="Oracle.ManagedDataAccess" version="12.2.1100" targetFramework="net452" />
   <package id="Respond" version="1.4.2" targetFramework="net452" />
   <package id="WebGrease" version="1.6.0" targetFramework="net452" />
 </packages>
