--- a/ClientWeb/ClientWeb/ClientWeb.csproj
+++ b/ClientWeb/ClientWeb/ClientWeb.csproj
@@ -187,7 +187,7 @@
     <EmbeddedResource Include="Models\Nhibernate\FilmActeur.hbm.xml" />
     <Content Include="Models\Nhibernate\Client.hbm.xml" />
     <Content Include="Models\Nhibernate\Employe.hbm.xml" />
-    <EmbeddedResource Include="Models\Nhibernate\Acteur.hbm.xml" />
+    <EmbeddedResource Include="Models\Nhibernate\Realisateur.hbm.xml" />
     <Content Include="Models\Nhibernate\Personne.hbm.xml" />
     <Content Include="packages.config" />
     <None Include="Scripts\jquery-3.1.1.intellisense.js" />
