--- a/ClientWeb/ClientWeb.Tests/packages.config
+++ b/ClientWeb/ClientWeb.Tests/packages.config
@@ -1,10 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Iesi.Collections" version="4.0.0.4000" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net452" />
+  <package id="NHibernate" version="4.1.1.4000" targetFramework="net452" />
   <package id="NUnit" version="3.7.1" targetFramework="net452" />
   <package id="NUnit3TestAdapter" version="3.7.0" targetFramework="net452" />
+  <package id="Oracle.ManagedDataAccess" version="12.2.1100" targetFramework="net452" />
 </packages>
