add rent copy feature

--- a/ClientWeb/ClientWeb/ClientWeb.csproj
+++ b/ClientWeb/ClientWeb/ClientWeb.csproj
@@ -221,7 +221,9 @@
     <EmbeddedResource Include="Models\Nhibernate\LocationClient.hbm.xml" />
     <Content Include="Models\Nhibernate\Client.hbm.xml" />
     <Content Include="Models\Nhibernate\Employe.hbm.xml" />
-    <EmbeddedResource Include="Models\Nhibernate\Realisateur.hbm.xml" />
+    <EmbeddedResource Include="Models\Nhibernate\Realisateur.hbm.xml">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Include="Models\Nhibernate\Inventaire.hbm.xml" />
     <Content Include="Models\Nhibernate\Personne.hbm.xml" />
     <EmbeddedResource Include="Models\Nhibernate\Scenariste.hbm.xml" />
