implement DAO pattern

--- a/ClientWeb/ClientWeb/ClientWeb.csproj
+++ b/ClientWeb/ClientWeb/ClientWeb.csproj
@@ -140,6 +140,14 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\FilmController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="DAO\IClientDAO.cs" />
+    <Compile Include="DAO\IEmployeDAO.cs" />
+    <Compile Include="DAO\IFilmDAO.cs" />
+    <Compile Include="DAO\ILocationClientDAO.cs" />
+    <Compile Include="DAO\Nhibernate\ClientDAO.cs" />
+    <Compile Include="DAO\Nhibernate\EmployeDAO.cs" />
+    <Compile Include="DAO\Nhibernate\FilmDAO.cs" />
+    <Compile Include="DAO\Nhibernate\LocationClientDAO.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
