--- a/ClientWeb/ClientWeb/ClientWeb.csproj
+++ b/ClientWeb/ClientWeb/ClientWeb.csproj
@@ -143,6 +143,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\ClientSession.cs" />
     <Compile Include="Models\FilmActeur.cs" />
     <Compile Include="Models\GestionConnexion.cs" />
     <Compile Include="Models\NHibernateSession.cs" />
