add analysis page and query

--- a/ClientWeb/ClientWeb/ClientWeb.csproj
+++ b/ClientWeb/ClientWeb/ClientWeb.csproj
@@ -289,6 +289,7 @@
     <None Include="SharedLibs\nhibernate-mapping.xsd">
       <SubType>Designer</SubType>
     </None>
+    <Content Include="Views\Film\Analyse.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
